fix loading spinner on firefox

--- a/plugins/c9.ide.layout.classic/themes/default-dark-gray.less
+++ b/plugins/c9.ide.layout.classic/themes/default-dark-gray.less
@@ -369,7 +369,7 @@
 @pane-button-save-height: 15px;
 @pane-button-save-right: -5px;
 @pane-button-save-top: 4px;
-@pane-button-save-animation: loading-spinner 1.2s linear 0s infinite normal;
+@pane-button-save-animation: loading-spinner 1.2s steps(11) infinite;
 @pane-button-close-image: "@{image-path}/close_tab_btn.png";
 @pane-button-close-image-width: 42px;
 @pane-button-close-image-height: 28px;
