--- a/plugins/c9.ide.layout.classic/themes/default-flat-light.less
+++ b/plugins/c9.ide.layout.classic/themes/default-flat-light.less
@@ -369,7 +369,7 @@
 @pane-button-save-height: 14px;
 @pane-button-save-right: -9px;
 @pane-button-save-top: 7px;
-@pane-button-save-animation: loading-24-spinner 1.2s linear 0s infinite normal;
+@pane-button-save-animation: loading-24-spinner 1.2s steps(24) infinite;
 @pane-button-close-image: "@{image-path}/close_tab_btn_flat_light.png";
 @pane-button-close-image-width: 42px;
 @pane-button-close-image-height: 28px;
